--- a/posts/2020-01-08-meu-ano-de-2019.md
+++ b/posts/2020-01-08-meu-ano-de-2019.md
@@ -86,7 +86,7 @@ Esse item está alinhado com o item acima: repassar conhecimento. Isso é algo q
 
 ### Continuar aperfeiçoando o inglês
 
-Atualmente, consigo entender e fazer me entender em inglês. Inclusive, iniciei aulas no [Cambly](https://www.cambly.com) há pouco mais de 1 mês. O intuito é testar a minha pronúncia, aperfeiçoar meu vocabulário e aperfeiçoar o meu \_listening\_ com diferentes "acents". Isso porque, apesar de me conseguir manter uma conversação, esse processo **ainda** não é natural. Sendo assim, o proposito é **aperfeiçoar o inglês, principalmente a conversação.**
+Atualmente, consigo entender e fazer me entender em inglês. Inclusive, iniciei aulas no [Cambly](https://www.cambly.com) há pouco mais de 1 mês. O intuito é testar a minha pronúncia, aperfeiçoar meu vocabulário e aperfeiçoar o meu _listening_ com diferentes "acents". Isso porque, apesar de conseguir manter uma conversa, esse processo **ainda** não é natural. Sendo assim, o proposito é **aperfeiçoar o inglês, principalmente a conversação.**
 
 ### Realizar 1 viagem internacional
 
