--- a/posts/2020-01-08-meu-ano-de-2019.md
+++ b/posts/2020-01-08-meu-ano-de-2019.md
@@ -112,7 +112,7 @@ Quem me conhece bem, sabe que eu não ando nada satisfeito com o serviço públi
 - Pouca possibilidade de crescimento (após diretor, só haveria a posição de Superintendente);
 - Tecnologias ultrapassadas (via de regra).
 
-Esses, a meu ver, são os principais problemas inerentes ao serviço público. Isso não significa que não ofereça vantagens. Eu fiz muitos amigos (gente muito boa tecnicamente, por sinal), aprendi bastante com os desafios e pude dar um conforto bacana para a minha família com a grana que venho ganhando. Porém, **em meu caso**, os benefícios não compeçam os malefícios existentes. Por isso, comecei, há cerca de 2 anos, a me aperfeiçoar bastante para sair do serviço público com calma e planejamento. **Esse momento está muito próximo**, pois pretendo realizá-lo em 2020.
+Esses, a meu ver, são os principais problemas inerentes ao serviço público. Isso não significa que não ofereça vantagens. Eu fiz muitos amigos (gente muito boa tecnicamente, por sinal), aprendi bastante com os desafios e pude dar um conforto bacana para a minha família com a grana que venho ganhando. Porém, **em meu caso**, os benefícios não compensam os malefícios existentes. Por isso, comecei, há cerca de 2 anos, a me aperfeiçoar bastante para sair do serviço público com calma e planejamento. **Esse momento está muito próximo**, pois pretendo realizá-lo em 2020.
 
 Aliado a isso, pretendo fazer a transição para um trabalho remoto. Dentre as várias vantagens (também há [desvantagens](https://willianjusten.com.br/minhas-experiencias-com-trabalho-remoto-em-ti/#qual-a-vantagem-e-desvantagem-de-se-trabalhar-remotamente-qual-a-maior-dificuldade-que-voce-encontrou-nesse-tipo-de-trabalho), com certeza), posso citar 2 principais:
 
