Update post links (#51)
* Update links

* Update list

--- a/posts/2020-01-08-meu-ano-de-2019.md
+++ b/posts/2020-01-08-meu-ano-de-2019.md
@@ -48,15 +48,15 @@ Analisando o que ocorreu no último ano e pensando no que desejo alcançar para 
 
 Antes de iniciar a lista, gostaria de frisar que o principal objetivo para o ano será **deixar o serviço público e ir trabalhar (preferencialmente remoto) para uma empresa decente na qual possa crescer e evoluir.** Por isso, várias das metas estão associadas a essa meta principal. A lista é a seguinte:
 
-1. Aprofundar/revisar o estudo do Javascript
-2. Me aperfeiçoar na realização de testes automatizados
-3. Criar 24 posts técnicos (em inglês?)
-4. "Produzir" mais e "consumir" menos
-5. Ministrar 1 talk técnica
-6. Continuar aperfeiçoando o inglês
-7. Realizar 1 viagem internacional
-8. Ler 1 livro de investimentos por mês e investir melhor
-9. Sair do serviço público/iniciar trabalho remoto
+1. [Aprofundar/revisar o estudo do Javascript](#aprofundarrevisar-o-estudo-do-javascript)
+2. [Me aperfeiçoar na realização de testes automatizados](#me-aperfeicoar-na-realizacao-de-testes-automatizados)
+3. [Criar 24 posts técnicos (em inglês?)](#criar-24-posts-tecnicos-em-ingles)
+4. ["Produzir" mais e "consumir" menos](#produzir-mais-e-consumir-menos)
+5. [Ministrar 1 talk técnica](#ministrar-1-talk-tecnica)
+6. [Continuar aperfeiçoando o inglês](#continuar-aperfeicoando-o-ingles)
+7. [Realizar 1 viagem internacional](#realizar-1-viagem-internacional)
+8. [Ler 1 livro de investimentos por mês e investir melhor](#ler-1-livro-de-investimentos-por-mes-e-investir-melhor)
+9. [Sair do serviço público/iniciar trabalho remoto](#sair-do-servico-publicoiniciar-trabalho-remoto)
 
 Irei detalhar abaixo cada um dos itens que a compõem. Sem mais delongas, vamos lá!
 
