--- a/posts/2020-01-08-meu-ano-de-2019.md
+++ b/posts/2020-01-08-meu-ano-de-2019.md
@@ -1,5 +1,6 @@
 ---
 date: '2020-01-08 07:15:00'
+image: /assets/img/2020.jpg
 title: Meu ano de 2019 e metas para 2020
 description: 'Mudança de cidade, bootcamp, RSXP, saída da diretoria e publicação do blog.'
 tags:
