Remove twitter content

--- a/posts/2020-01-08-meu-ano-de-2019.md
+++ b/posts/2020-01-08-meu-ano-de-2019.md
@@ -128,6 +128,6 @@ Trabalhar para o exterior tona possível receber através de uma moeda forte (ex
 
 Foi um ano com mudanças significativas na minha vida e da minha esposa, com alguns percalços, mas também com muitos desafios que nos fizeram crescer. Isso me levar a crer ainda mais no seguinte: **para crescer, você tem de estar disposto a enfrentar desafios e a correr riscos.** Nem tudo sairá como você deseja, mas tenha serenidade e sabedoria para entender que isso faz parte do aprendizado e te formará enquanto pessoa e profissional.
 
-É isso! Se quiser ter acesso a mais conteúdos (principalmente técnicos)**, me siga nas redes sociais** (principalmente [twitter](https://twitter.com/luizcns) e [linkedin](https://www.linkedin.com/in/lcnogueira))**,** pois sempre te avisarei quando um novo conteúdo estiver saindo do forno.
+É isso! Se quiser ter acesso a mais conteúdos (principalmente técnicos)**, me siga nas redes sociais**, pois sempre te avisarei quando um novo conteúdo estiver saindo do forno.
 
 Um excelente 2020 a você! Até breve!
